# MIOpenGEMM

./: .clang-format  .gitignore  CMakeLists.txt  Jenkinsfile  README.md  boost.cmake  findings.txt  proto_normal.cl  requirements.txt
MIOpenGEMM/: CMakeLists.txt  MIOpenGEMM-config.cmake.in  config.hpp.install
MIOpenGEMM/include/MIOpenGEMM/: alphagenerator.hpp  architests.hpp  bundle.hpp  copygenerator.hpp  derivedparams.hpp  iterexperiments.hpp  kernel.hpp  outputwriter.hpp  randomutil.hpp  setabcw.hpp  sizingup.hpp  solution.hpp
MIOpenGEMM/src/: accuracytests.cpp  architests.cpp  basegenerator.cpp  basicfind.cpp  bundle.cpp  cacheexample.cachetxt  copygenerator.cpp  devmiogemm.cpp  devtgmx.cpp  error.cpp  findparams.cpp  geometryutil.cpp  hyperparams.cpp  iterexperiments.cpp  kernel.cpp  kernelstring.cpp  miogemm.cpp  prepgenerator.cpp  redirection.cpp  sizingup.cpp  stringutilbase.cpp  tiling.cpp
apibench/: CMakeLists.txt  gemm1.cpp  gemmbench.cpp
dev/python/: CMakeLists.txt  baidu_bench.py  deepbench_results.py  deeptense.py  pytinygemm.pyx  utility_functions.py  write_directories.py
dev/python/backconvwrwdims/: make_cpp.py
dev/python/baidu_benchmarks/: DeepBench_NV_TitanX_Pascal.ods
dev/python/deepbench/: baidu_bench.py  deepbench_results.py
dev/python/experiments/: experiments.py  make_multiple_kernels.py  string_utils.py  utility_functions.py
dev/python/kernelreduce/: kernelreducer.py
dev/python/other/: fun_with_tiling.py  output_processing.py
dev/python/plotting/: one_away_plotter.py  plotting_grid_1.py  soln_path_plotter.py
dev/python/source/: main.cpp
dev/python/tensilebenchmarking/: tensout1.txt  tensout4.txt
doc/: CMakeLists.txt  README.md
doc/html/: apireference.html  genindex.html  index.html  install.html  miogemm.html  objects.inv  search.html  searchindex.js
doc/html/_sources/: apireference.rst.txt
doc/src/: apireference.rst  conf.py  convolution.rst  gemm.rst  geometry.rst  index.rst  install.md  miogemm.rst  programcache.rst
examples/: CMakeLists.txt  README.md  acache.txt  accu.cpp  apidriver.cpp  apiexample1.cpp  backconvwrw.cpp  basicexample.cpp  basicfind.hpp  bench.cpp  deepbench.cpp  devtest.cpp  find.cpp  floatxdemo.cpp  gemmbench.cpp  gencache.cpp  genrocmtest.cpp  gentest.cpp  initialisationdemo.cpp  mergecaches.cpp  multifind.cpp  multifindbase.cpp  print.cpp  redirection.cpp  redirectionexample.cpp  runcache.cpp  smallgeometrytests.cpp
examples/old/: benchthecache.cpp  deepbench.cpp  devtest.cpp  experiment1.cpp
miopengemm/: CMakeLists.txt  miopengemm-config.cmake.in
miopengemm/include/miopengemm/: accuracytests.hpp  alphagenerator.hpp  apitest.hpp  architests.hpp  basegenerator.hpp  basicfind.hpp  betacgenerator.hpp  bundle.hpp  bylinegenerator.hpp  copygenerator.hpp  cpugemm.hpp  derivedparams.hpp  devmiogemm.hpp  diva.hpp  enums.hpp  error.hpp  findparams.hpp  floattostring.hpp  gemm.hpp  generic.hpp  geometries.hpp  geometry.hpp  geometryutil.hpp  graph.hpp  hint.hpp  hyperparams.hpp  iterexperiments.hpp  jinx.hpp  kernel.hpp  kernelcache.hpp  kernelcachemerge.hpp  kernelstring.hpp  macgrid.hpp  miogemm.hpp  nearest.hpp  normalformgenerator.hpp  oclutil.hpp  openclutil.hpp  outputwriter.hpp  par_for.hpp  (+19 more)
miopengemm/src/: accuracytests.cpp  alphagenerator.cpp  apitest.cpp  architests.cpp  basegenerator.cpp  basicfind.cpp  betacgenerator.cpp  bundle.cpp  bylinegenerator.cpp  cache1.cachetxt  cache2.cachetxt  cache3.cachetxt  cache4.cachetxt  cacheexample.cachetxt  conv.cachetxt  copygenerator.cpp  cpugemm.cpp  deepbench.cachetxt  deepbench2.cachetxt  derivedparams.cpp  devmiogemm.cpp  diva.cpp  enums.cpp  error.cpp  findparams.cpp  floattostring.cpp  gemm.cpp  generic.cpp  geometries.cpp  geometry.cpp  geometryutil.cpp  graph.cpp  hint.cpp  hyperparams.cpp  iterexperiments.cpp  jinx.cpp  kernel.cpp  kernelcache.cpp  kernelcachemerge.cpp  kernelstring.cpp  (+29 more)
tests/: CMakeLists.txt  README.md  basicexample.cpp  basicfind.hpp  benchthecache.cpp  convhelp.cpp  deepbench.cpp  devtest.cpp  epsilonoff1.cpp  experiment1.cpp  filter.py  gencache.cpp  hangs1.cpp  incorrect1.cpp  initialisationdemo.cpp  iterexperiments.hpp  random_sample_gemm0.cpp  redirectionexample.cpp  rocm1.cpp  rocmaccu.cpp  setabcw.hpp  smallgeometrytests.cpp  test_gemm0.cpp  tinygemmtest.cpp  verifycache.cpp
testsexamples/: CMakeLists.txt  README.md  backconvwrw.cpp  basicexample.cpp  basicfind.hpp  deepbench.cpp  devtest.cpp  redirectionexample.cpp  setabc.hpp  setabcw.hpp  smallgeometrytests.cpp
tinygemm/: CMakeLists.txt  config.hpp.dev  config.hpp.install  tinygemm-config.cmake.in
tinygemm/include/: accuracytests.hpp  betackernelutil.hpp  consistencychecks.hpp  defaulthyperparams.hpp  defaultoutpath.hpp  devgemmapi.hpp  devtinygemm.hpp  floattostring.hpp  hyperparams.hpp  kernelchecks.hpp  kernelsnips.hpp  makekernelsource.hpp  openclgemmapi.hpp  openclutil.hpp  outputwriter.hpp  problemgeometry.hpp  redirection.hpp  sizingup.hpp  slowcpugemm.hpp  stringutilbase.hpp  tinygemm.hpp  tinygemmerror.hpp  tinygemmgeometry.hpp  tinygemmsolution.hpp
tinygemm/include/MIOpenGEMM/: accuracytests.hpp  alphagenerator.hpp  basegenerator.hpp  basicfind.hpp  betacgenerator.hpp  bundle.hpp  bylinegenerator.hpp  copygenerator.hpp  (+20 more)
tinygemm/opencl/: betackernel_f32.cl  betackernel_f64.cl
tinygemm/python/: make_kernel.py
tinygemm/src/: accuracytests.cpp  alphagenerator.cpp  architests.cpp  basegenerator.cpp  basicfind.cpp  betacgenerator.cpp  betackernelutil.cpp  betagenerator.cpp  bundle.cpp  bylinegenerator.cpp  cacheexample.cachetxt  consistencychecks.cpp  copygenerator.cpp  defaultpaths.cpp  derivedparams.cpp  devgemmapi.cpp  devtgmx.cpp  devtinygemm.cpp  error.cpp  findparams.cpp  floattostring.cpp  forallgenerator.cpp  generatorutil.cpp  geometry.cpp  geometryutil.cpp  hypconv.py  hyperparams.cpp  iterexperiments.cpp  kernel.cpp  kernelcache.cpp  kernelchecks.cpp  kernelsnips.cpp  kernelstring.cpp  kernelstringgenerator.cpp  makekernelsource.cpp  normalformgenerator.cpp  openclgemmapi.cpp  openclutil.cpp  outputwriter.cpp  prepgenerator.cpp  (+20 more)
(+102 files in other folders)
